--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -7,7 +7,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
     background-color: #fe0038;
 }
