--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,8 @@
   <meta name="author" content="{{ site.author }}">
   <meta name="description" content="{{ site.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  
+  <link rel="canonical" href="https://medicalid.info">
   <link rel="icon" href="/assets/favicon.ico">
 
   <title>Medical ID - The Android app that could save your life</title>
