--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -12,3 +12,8 @@
   ga('send', 'pageview');
 
 </script>
+<script type="text/javascript">
+var addthis_share = {
+   url: "https://medicalid.info"
+}
+</script>
