--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <meta name="description" content="{{ site.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <link rel="canonical" href="https://medicalid.info">
+  <link rel="canonical" href="https://medicalid.info/">
   <link rel="icon" href="/assets/favicon.ico">
 
   <title>Medical ID - The Android app that could save your life</title>
