--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -14,6 +14,6 @@
 </script>
 <script type="text/javascript">
 var addthis_share = {
-   url: "https://medicalid.info"
+   url: "https://medicalid.info/"
 }
 </script>
