Add Transifex live translation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,9 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/css/style.css">
+
+  <script type="text/javascript">window.liveSettings={api_key:"2494f274d57f49809afc157b7d80332f"};</script>
+  <script type="text/javascript" src="//cdn.transifex.com/live.js"></script>
 </head>
 
 <body>
