--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,9 +30,6 @@
         </a>
 
         <ul class="nav nav-pills float-md-right">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-          </li>
           <li class="nav-item">
             <a class="nav-link" href="/reviews">Reviews</a>
           </li>
@@ -44,6 +41,11 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://play.google.com/store/apps/details?id=app.medicalid.free" target="_blank">
+              <button type="button" class="btn btn-highlight">Try now</button>
+            </a>
           </li>
         </ul>
 
