Update FAQ section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,11 @@
   <script type="text/javascript">window.liveSettings={api_key:"2494f274d57f49809afc157b7d80332f"};</script>
   <script type="text/javascript" src="//cdn.transifex.com/live.js"></script>
 </head>
-
 <body>
+    <svg xmlns="http://www.w3.org/2000/svg" style="padding:0; margin:0; height:0; width: 0; line-height:0; font-size: 0; display:none; visibility:hidden;">
+        <symbol viewBox="0 0 12 16" id="check"><path fill-rule="evenodd" d="M12 5l-8 8-4-4 1.5-1.5L4 10l6.5-6.5z"/></symbol>
+        <symbol viewBox="0 0 12 16" id="x"><path fill-rule="evenodd" d="M7.48 8l3.75 3.75-1.48 1.48L6 9.48l-3.75 3.75-1.48-1.48L4.52 8 .77 4.25l1.48-1.48L6 6.52l3.75-3.75 1.48 1.48z"/></symbol>
+    </svg>
     <nav class="navbar navbar-toggleable-md navbar-light bg-faded" >
       <div class="container">
           <button class="navbar-toggler navbar-toggler-right" style="margin-top:16px" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
