--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,8 +69,25 @@ h1, h2, h3 {
   background-color: #fceff2;
 }
 
+.table {
+    border: 1px solid #e1e1e1;
+}
+
+.table thead th {
+    border-bottom: 2px solid #e1e1e1;
+}
+
 .table td {
+    border-bottom: 1px solid #e1e1e1;
+    border-top: 1px solid #e1e1e1;
     text-align: center;
+    vertical-align: middle;
+}
+
+.table th {
+    border-bottom: 1px solid #e1e1e1;
+    border-top: 1px solid #e1e1e1;
+    vertical-align: middle;
 }
 
 .footer, .footer:visited, .footer:active {
