--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="https://play.google.com/store/apps/details?id=app.medicalid.free" target="_blank" title="Try Medical ID now!">
-                  <button type="button" class="btn btn-highlight">Try now</button>
+                  <button type="button" class="btn btn-highlight">Try for free</button>
                 </a>
               </li>
             </ul>
