Underline FAQ titles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,8 @@ h1, h2, h3 {
 .faq-entry h4 {
   font-weight: bold;
   margin-bottom: 16px;
+  text-decoration: underline;
+  padding-bottom: 3px
 }
 
 .faq-entry h5 {
