--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,8 +49,8 @@
                 <a class="nav-link" href="/contact">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://play.google.com/store/apps/details?id=app.medicalid.free" target="_blank" title="Try Medical ID now!">
-                  <button type="button" class="btn btn-highlight">Free trial</button>
+                <a class="nav-link" href="https://play.google.com/store/apps/details?id=app.medicalid.free" title="Try Medical ID now!">
+                  <button type="button" class="btn btn-highlight">Try now</button>
                 </a>
               </li>
             </ul>
