--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
 
   <script type="text/javascript">window.liveSettings={api_key:"2494f274d57f49809afc157b7d80332f"};</script>
   <script type="text/javascript" src="//cdn.transifex.com/live.js"></script>
+  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="f9f55ee0-e256-4dca-88ec-94e896dab6e0";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.im/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 </head>
 <body>
     <svg xmlns="http://www.w3.org/2000/svg" style="padding:0; margin:0; height:0; width: 0; line-height:0; font-size: 0; display:none; visibility:hidden;">
