--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/css/style.css">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130282593-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-130282593-1');
+  </script>
   <script type="text/javascript">window.liveSettings={api_key:"2494f274d57f49809afc157b7d80332f"};</script>
   <script type="text/javascript" src="//cdn.transifex.com/live.js"></script>
   <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="f9f55ee0-e256-4dca-88ec-94e896dab6e0";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.im/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
