Set of enhancements
- Resize logo
- Add translation bar
- Move navbar button to the right on mobiles
- Change default font

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,14 @@
           integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/style.css">
 
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({pageLanguage: 'en'}, 'google-translate-element');
+        }
+    </script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130282593-1"></script>
     <script>
@@ -45,17 +53,20 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <button class="navbar-toggler" style="margin-top:16px" type="button" data-toggle="collapse"
+
+
+            <a class="navbar-brand notranslate" href="/">
+                <img id="icon" src="/assets/images/logo.png"
+                     width="44" height="44"
+                     class="d-inline-block"
+                     alt="Medical ID"
+                     style="margin-right: 16px; margin-top: -4px"> Medical ID
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false"
                     aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <a class="navbar-brand" href="/" style="font-size: 1.6em; font-weight: 400; min-width: 300px;">
-                <img id="icon" src="/assets/images/logo.png" width="44" height="44" class="d-inline-block"
-                     alt="Medical ID"
-                     style="margin-right: 16px; margin-top: -4px"> Medical ID
-            </a>
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarToggler">
                 <ul class="navbar-nav">
@@ -91,5 +102,7 @@
 
 {% include footer.html %}
 {% include scripts.html %}
+
+<div id="google-translate-element"></div>
 </body>
 </html>
