--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Oswald|Palanquin|Palanquin+Dark');
+@import url('https://fonts.googleapis.com/css?family=Oswald|Source+Sans+Pro:400,600,700');
 
 html, body {
-    font-family: Palanquin, Arial,Noto Sans,sans-serif;
+    font-family: 'Source Sans Pro', Arial,Noto Sans,sans-serif;
     margin: 0;
     padding: 0;
     text-rendering: geometricPrecision;
@@ -18,6 +18,11 @@ body {
 
 footer {
     margin: 32px;
+}
+
+.navbar-brand {
+    font-family: 'Source Sans Pro', Arial, sans-serif;
+    font-size: 1.65em;
 }
 
 h1 {
@@ -146,9 +151,9 @@ th a, th a:visited, th a:active {
 .try-now {
     background-color: #fe0038;
     color: white;
-    font-family: 'Palanquin Dark', Arial, sans-serif;
-    font-size: 14px;
-    font-weight: 600;
+    font-family: 'Source Sans Pro', Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 700;
     line-height: 14px;
     margin-left: 24px;
     padding: 10px 20px;
@@ -236,3 +241,23 @@ li i {
 .red {
     color: #d60001;
 }
+
+#google-translate-element {
+    background-color: white;
+    border-top: 1px solid #e1e1e1;
+    bottom: 0;
+    left: 0;
+    padding: 28px 24px;
+    position: fixed;
+    right: 0;
+}
+
+@media only screen and (min-width: 1200px) {
+    #google-translate-element {
+        background-color: transparent;
+        border: 0;
+        right: auto;
+        padding: 24px 24px;
+    }
+}
+
