Add arc.io widget

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,8 @@
           integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/style.css">
 
+    <script async src="https://arc.io/widget.min.js#rFYWJUEU"></script>
+
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
     <script type="text/javascript">
