Replace references to Elaunira SARL from Laurent Pellegrino

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 
 <footer class="container text-center" style="margin-top: 32px;">
   <p><a class="footer" href="/eula" title="Terms of Use">Terms of Use</a> - <a class="footer" href="/privacy" title="Privacy Policy">Privacy Policy</a></p>
-  <p>Made with ♥ by <a class="footer-underlined" href="https://www.linkedin.com/in/laurentpellegrino/" title="Author">Laurent Pellegrino</a> - &copy; 2014 - <script>document.write(new Date().getFullYear())</script></p>
+  <p>Made with ♥ by <a class="footer-underlined" href="https://www.linkedin.com/in/laurentpellegrino/" title="Author">Elaunira SARL</a> - &copy; 2014 - <script>document.write(new Date().getFullYear())</script></p>
 </footer>
